--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Apex - Home Repair Website Template</title>
+    <title>Licores Juan - La mejor licorera del pais</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -65,7 +65,6 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Mon - Fri : 09 AM - 09 PM</small>
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -94,7 +93,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
         </h1>
       </a>
       <button
@@ -107,25 +106,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link active">About Us</a>
-          <a href="service.html" class="nav-item nav-link">Our Services</a>
+          <a href="index.html" class="nav-item nav-link active">Inicio</a>
+          <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+          <a href="service.html" class="nav-item nav-link">Reglamentos</a>
           <div class="nav-item dropdown">
             <a
               href="#"
               class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
-              >Pages</a
+              >Tipos</a
             >
             <div class="dropdown-menu bg-light m-0">
-              <a href="feature.html" class="dropdown-item">Features</a>
-              <a href="appointment.html" class="dropdown-item">Appointment</a>
-              <a href="team.html" class="dropdown-item">Our Team</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="feature.html" class="dropdown-item">Cervezas</a>
+              <a href="appointment.html" class="dropdown-item">Licores</a>
+              <a href="team.html" class="dropdown-item">Cocteles</a>
             </div>
           </div>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="contact.html" class="nav-item nav-link">Contactenos</a>
         </div>
       </div>
     </nav>
@@ -137,17 +134,17 @@
       data-wow-delay="0.1s"
     >
       <div class="container text-center py-5">
-        <h1 class="display-4 text-white animated slideInDown mb-4">About Us</h1>
+        <h1 class="display-4 text-white animated slideInDown mb-4">Contactanos</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Home</a>
+              <a class="text-white" href="#">Inicio</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
+              <a class="text-white" href="#">Paginas</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              About
+              nosotros
             </li>
           </ol>
         </nav>
@@ -179,7 +176,7 @@
                 >
                   <h1 class="text-white">25</h1>
                   <h2 class="text-white">Years</h2>
-                  <h5 class="text-white mb-0">Experience</h5>
+                  <h5 class="text-white mb-0">En el mercado</h5>
                 </div>
               </div>
             </div>
@@ -187,20 +184,20 @@
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="h-100">
               <div class="border-start border-5 border-primary ps-4 mb-5">
-                <h6 class="text-body text-uppercase mb-2">About Us</h6>
+                <h6 class="text-body text-uppercase mb-2">Sobre nosotros</h6>
                 <h1 class="display-6 mb-0">
-                  Unique Solutions For Residentials & Industries!
+                  Soluciones unicas para un desparche en la casa
                 </h1>
               </div>
               <p>
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                sed stet lorem sit clita duo justo magna dolore erat amet
+                Nos encargamos de darte una mejor experiencia recomendandote los 
+                mejores licores que podras conseguir en el pais, ademas de que no
+                te tienes que parar de tu silla o dejar a tus amigos, con los domicilios
+                los podras recibir en la puerta de tu casa.
               </p>
               <p class="mb-4">
-                Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-                Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-                sed stet lorem sit clita duo justo magna dolore erat amet
+                No lo pienses mas solo contactanos para que pases un excelente sabado 
+                con tu pareja y amigos.
               </p>
               <div class="border-top mt-4 pt-4">
                 <div class="row g-4">
@@ -208,19 +205,19 @@
                     <i
                       class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                     ></i>
-                    <h6 class="mb-0">Ontime at services</h6>
+                    <h6 class="mb-0">Puntualidad en los Servicios</h6>
                   </div>
                   <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.3s">
                     <i
                       class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                     ></i>
-                    <h6 class="mb-0">24/7 hours services</h6>
+                    <h6 class="mb-0">Servicios las 24 horas</h6>
                   </div>
                   <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.5s">
                     <i
                       class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                     ></i>
-                    <h6 class="mb-0">Verified professionals</h6>
+                    <h6 class="mb-0">Licores 100% originales</h6>
                   </div>
                 </div>
               </div>
@@ -237,15 +234,12 @@
         <div class="row g-5 align-items-end mb-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4">
-              <h6 class="text-body text-uppercase mb-2">Our Team</h6>
-              <h1 class="display-6 mb-0">Our Expert Worker</h1>
+              <h6 class="text-body text-uppercase mb-2"></h6>
+              <h1 class="display-6 mb-0">Nuestros mejores empleados</h1>
             </div>
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
             <p class="mb-0">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
             </p>
           </div>
         </div>
@@ -255,7 +249,7 @@
               <img class="img-fluid" src="img/team-1.jpg" alt="" />
               <div class="team-text bg-white p-4">
                 <h5>Full Name</h5>
-                <span>Engineer</span>
+                <span>bartender</span>
               </div>
             </div>
           </div>
@@ -264,7 +258,7 @@
               <img class="img-fluid" src="img/team-2.jpg" alt="" />
               <div class="team-text bg-white p-4">
                 <h5>Full Name</h5>
-                <span>Engineer</span>
+                <span>bartender</span>
               </div>
             </div>
           </div>
@@ -273,7 +267,7 @@
               <img class="img-fluid" src="img/team-3.jpg" alt="" />
               <div class="team-text bg-white p-4">
                 <h5>Full Name</h5>
-                <span>Engineer</span>
+                <span>bartender</span>
               </div>
             </div>
           </div>
@@ -291,7 +285,7 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
             </h1>
             <p>
               Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
@@ -313,35 +307,35 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Address</h4>
+            <h4 class="text-light mb-4">Contactenos</h4>
             <p>
-              <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Quick Links</h4>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <h4 class="text-light mb-4">Enlaces rapidos</h4>
+            <a class="btn btn-link" href="">Sobre nosotros</a>
+            <a class="btn btn-link" href="">Contactenos</a>
+            <a class="btn btn-link" href="">Otros servicios</a>
+            <a class="btn btn-link" href="">Terminos y condiciones</a>
+            <a class="btn btn-link" href="">Soporte</a>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Newsletter</h4>
-            <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+            <h4 class="text-light mb-4">Informate</h4>
+            <p>Te enviaremos las ultimas noticias.</p>
             <div class="position-relative mx-auto" style="max-width: 400px">
               <input
                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                 type="text"
-                placeholder="Your email"
+                placeholder="Correo"
               />
               <button
                 type="button"
                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
-                SignUp
+                Inscribete
               </button>
             </div>
           </div>
