--- a/appointment.html
+++ b/appointment.html
@@ -65,7 +65,6 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Mon - Fri : 09 AM - 09 PM</small>
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -94,7 +93,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
         </h1>
       </a>
       <button
@@ -107,27 +106,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="service.html" class="nav-item nav-link">Our Services</a>
+          <a href="index.html" class="nav-item nav-link active">Inicio</a>
+          <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+          <a href="service.html" class="nav-item nav-link">Reglamentos</a>
           <div class="nav-item dropdown">
             <a
               href="#"
-              class="nav-link dropdown-toggle active"
+              class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
-              >Pages</a
+              >Tipos</a
             >
             <div class="dropdown-menu bg-light m-0">
-              <a href="feature.html" class="dropdown-item">Features</a>
-              <a href="appointment.html" class="dropdown-item active"
-                >Appointment</a
-              >
-              <a href="team.html" class="dropdown-item">Our Team</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="feature.html" class="dropdown-item">Cervezas</a>
+              <a href="appointment.html" class="dropdown-item">Licores</a>
+              <a href="team.html" class="dropdown-item">Cocteles</a>
             </div>
           </div>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="contact.html" class="nav-item nav-link">Contactenos</a>
         </div>
       </div>
     </nav>
@@ -140,18 +135,18 @@
     >
       <div class="container text-center py-5">
         <h1 class="display-4 text-white animated slideInDown mb-4">
-          Appointment
+          Licores
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Home</a>
+              <a class="text-white" href="#">Inicio</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
+              <a class="text-white" href="#">Paginas</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Appointment
+              Licores
             </li>
           </ol>
         </nav>
@@ -159,93 +154,120 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- Appointment Start -->
+    <!-- Features Start -->
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-5">
-          <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
-              <h6 class="text-body text-uppercase mb-2">Appointment</h6>
+              <h6 class="text-body text-uppercase mb-2">¡Los mejores licores!</h6>
               <h1 class="display-6 mb-0">
-                A Company Involved In Service And Maintenance
+                Nuestros Licores
               </h1>
             </div>
-            <p class="mb-0">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
+            <p class="mb-5">
+              Tenemos todo tipo de licores que no dejaran que la fiesta acabe
             </p>
+            <div class="row gy-5 gx-4">
+              <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
+                <div class="d-flex align-items-center mb-3">
+                  <i
+                    class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
+                  ></i>
+                  <h6 class="mb-0">Aguardiente</h6>
+                </div>
+                <span>Antioqueño</span>
+                <br>
+                <span>Néctar</span>
+                <br>
+                <span>Cristal</span>
+                <br>
+                <span>Llanero</span>
+                <br>
+                <span>Real</span>
+              </div>
+              <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
+                <div class="d-flex align-items-center mb-3">
+                  <i
+                    class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
+                  ></i>
+                  <h6 class="mb-0">Ron</h6>
+                </div>
+                <span>Viejo de caldas</span>
+                <br>
+                <span>Medellin</span>
+                <br>
+                <span>Bacardi</span>
+                <br>
+                <span>Havana club especial</span>
+                <br>
+              </div>
+              <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
+                <div class="d-flex align-items-center mb-3">
+                  <i
+                    class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
+                  ></i>
+                  <h6 class="mb-0">Tequila</h6>
+                </div>
+                <span>1800 Añejo</span>
+                <br>
+                <span>Don Julio Añejo</span>
+                <br>
+                <span>Jose Cuervo</span>
+                <br>
+                <span>Herradura Reposado</span>
+                <br>
+                <span>Gran Centenario Leyenda.</span>
+
+              </div>
+              <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                <div class="d-flex align-items-center mb-3">
+                  <i
+                    class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
+                  ></i>
+                  <h6 class="mb-0">whisky </h6>
+                </div>
+                <span>Johnnie Walker</span>
+                <br>
+                <span>Chivas Regal</span>
+                <br>
+                <span>Buchanan's</span>
+                <br>
+                <span>Ballantine's</span>
+                <br>
+                <span>Glenfiddich</span>
+              </div>
+            </div>
           </div>
-          <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <form>
-              <div class="row g-3">
-                <div class="col-sm-6">
-                  <div class="form-floating">
-                    <input
-                      type="text"
-                      class="form-control bg-light border-0"
-                      id="gname"
-                      placeholder="Gurdian Name"
-                    />
-                    <label for="gname">Your Name</label>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="form-floating">
-                    <input
-                      type="email"
-                      class="form-control bg-light border-0"
-                      id="gmail"
-                      placeholder="Gurdian Email"
-                    />
-                    <label for="gmail">Your Email</label>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="form-floating">
-                    <input
-                      type="text"
-                      class="form-control bg-light border-0"
-                      id="cname"
-                      placeholder="Child Name"
-                    />
-                    <label for="cname">Your Mobile</label>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="form-floating">
-                    <input
-                      type="text"
-                      class="form-control bg-light border-0"
-                      id="cage"
-                      placeholder="Child Age"
-                    />
-                    <label for="cage">Service Type</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-floating">
-                    <textarea
-                      class="form-control bg-light border-0"
-                      placeholder="Leave a message here"
-                      id="message"
-                      style="height: 100px"
-                    ></textarea>
-                    <label for="message">Message</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <button class="btn btn-primary w-100 py-3" type="submit">
-                    Get Appointment
-                  </button>
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div
+              class="position-relative overflow-hidden ps-5 pt-5 h-100"
+              style="min-height: 400px"
+            >
+              <img
+                class="position-absolute w-100 h-100"
+                src="img/licores.jpg"
+                alt=""
+                style="object-fit: cover"
+              />
+              <div
+                class="position-absolute top-0 start-0 bg-white pe-3 pb-3"
+                style="width: 200px; height: 200px"
+              >
+                <div
+                  class="d-flex flex-column justify-content-center text-center bg-primary h-100 p-3"
+                >
+                  <h1 class="text-white">25</h1>
+                  <h2 class="text-white">años</h2>
+                  <h5 class="text-white mb-0">En el mercado</h5>
                 </div>
               </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Appointment End -->
+    <!-- Features End -->
 
     <!-- Footer Start -->
     <div
@@ -256,7 +278,7 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
             </h1>
             <p>
               Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
@@ -278,35 +300,35 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Address</h4>
+            <h4 class="text-light mb-4">Contactanos</h4>
             <p>
-              <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Quick Links</h4>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <h4 class="text-light mb-4">Enlaces rapidos</h4>
+            <a class="btn btn-link" href="">Sobre nosotros</a>
+            <a class="btn btn-link" href="">Contactenos</a>
+            <a class="btn btn-link" href="">Otros servicios</a>
+            <a class="btn btn-link" href="">Terminos y condiciones</a>
+            <a class="btn btn-link" href="">Soporte</a>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Newsletter</h4>
-            <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+            <h4 class="text-light mb-4">Informate</h4>
+            <p>Te enviaremos las ultimas noticias.</p>
             <div class="position-relative mx-auto" style="max-width: 400px">
               <input
                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                 type="text"
-                placeholder="Your email"
+                placeholder="Correo"
               />
               <button
                 type="button"
                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
-                SignUp
+                Inscribete
               </button>
             </div>
           </div>
