--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Apex - Home Repair Website Template</title>
+    <title>Licores Juan - La mejor licorera del pais</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -65,7 +65,7 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Mon - Fri : 09 AM - 09 PM</small>
+            
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -94,7 +94,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
         </h1>
       </a>
       <button
@@ -107,25 +107,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="service.html" class="nav-item nav-link">Our Services</a>
+          <a href="index.html" class="nav-item nav-link active">Inicio</a>
+          <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+          <a href="service.html" class="nav-item nav-link">Reglamentos</a>
           <div class="nav-item dropdown">
             <a
               href="#"
               class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
-              >Pages</a
+              >Tipos</a
             >
             <div class="dropdown-menu bg-light m-0">
-              <a href="feature.html" class="dropdown-item">Features</a>
-              <a href="appointment.html" class="dropdown-item">Appointment</a>
-              <a href="team.html" class="dropdown-item">Our Team</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="feature.html" class="dropdown-item">Cervezas</a>
+              <a href="appointment.html" class="dropdown-item">Licores</a>
+              <a href="team.html" class="dropdown-item">Cocteles</a>
             </div>
           </div>
-          <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+          <a href="contact.html" class="nav-item nav-link">Contactenos</a>
         </div>
       </div>
     </nav>
@@ -138,18 +136,18 @@
     >
       <div class="container text-center py-5">
         <h1 class="display-4 text-white animated slideInDown mb-4">
-          Contact Us
+          Domicilios
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Home</a>
+              <a class="text-white" href="#">Inicio</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
+              <a class="text-white" href="#">Paginas</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Contact Us
+              Contactenos
             </li>
           </ol>
         </nav>
@@ -214,15 +212,16 @@
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
-              <h6 class="text-body text-uppercase mb-2">Contact Us</h6>
+              <h6 class="text-body text-uppercase mb-2">Contactenos</h6>
               <h1 class="display-6 mb-0">
-                If You Have Any Query, Please Contact Us
+                Si tiene alguna consulta, contáctenos
               </h1>
             </div>
             <p class="mb-4">
-              The contact form is currently inactive. Get a functional and
-              working contact form with Ajax & PHP in a few minutes. Just copy
-              and paste the files, add a little code and you're done.
+              El formulario de contacto está actualmente inactivo. 
+              Obtenga un formulario de contacto funcional y funcional 
+              con Ajax y PHP en unos minutos. Simplemente copie y pegue
+               los archivos, agregue un pequeño código y listo.
               <a href="https://htmlcodex.com/contact-form">Download Now</a>.
             </p>
             <form>
@@ -235,7 +234,7 @@
                       id="name"
                       placeholder="Your Name"
                     />
-                    <label for="name">Your Name</label>
+                    <label for="name">Nombre</label>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -246,7 +245,7 @@
                       id="email"
                       placeholder="Your Email"
                     />
-                    <label for="email">Your Email</label>
+                    <label for="email">Telefono</label>
                   </div>
                 </div>
                 <div class="col-12">
@@ -257,7 +256,7 @@
                       id="subject"
                       placeholder="Subject"
                     />
-                    <label for="subject">Subject</label>
+                    <label for="subject">Direccion</label>
                   </div>
                 </div>
                 <div class="col-12">
@@ -268,12 +267,12 @@
                       id="message"
                       style="height: 150px"
                     ></textarea>
-                    <label for="message">Message</label>
+                    <label for="message">Pedido</label>
                   </div>
                 </div>
                 <div class="col-12">
                   <button class="btn btn-primary py-3 px-5" type="submit">
-                    Send Message
+                    Pedir Domicilio
                   </button>
                 </div>
               </div>
@@ -293,7 +292,7 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
             </h1>
             <p>
               Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
@@ -315,35 +314,35 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Address</h4>
+            <h4 class="text-light mb-4">Contactenos</h4>
             <p>
-              <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Quick Links</h4>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <h4 class="text-light mb-4">Enlaces rapidos</h4>
+            <a class="btn btn-link" href="">Sobre nosotros</a>
+            <a class="btn btn-link" href="">Contactanos</a>
+            <a class="btn btn-link" href="">Otros servicios</a>
+            <a class="btn btn-link" href="">Terminos y condiciones</a>
+            <a class="btn btn-link" href="">Soporte</a>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Newsletter</h4>
+            <h4 class="text-light mb-4">Informate</h4>
             <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
             <div class="position-relative mx-auto" style="max-width: 400px">
               <input
                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                 type="text"
-                placeholder="Your email"
+                placeholder="Correo"
               />
               <button
                 type="button"
                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
-                SignUp
+                Inscribete
               </button>
             </div>
           </div>
