--- a/feature.html
+++ b/feature.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Apex - Home Repair Website Template</title>
+    <title>icores Juan - La mejor licorera del pais</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -65,7 +65,6 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Mon - Fri : 09 AM - 09 PM</small>
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -94,7 +93,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
         </h1>
       </a>
       <button
@@ -107,25 +106,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="service.html" class="nav-item nav-link">Our Services</a>
+          <a href="index.html" class="nav-item nav-link active">Inicio</a>
+          <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+          <a href="service.html" class="nav-item nav-link">Reglamentos</a>
           <div class="nav-item dropdown">
             <a
               href="#"
-              class="nav-link dropdown-toggle active"
+              class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
-              >Pages</a
+              >Tipos</a
             >
             <div class="dropdown-menu bg-light m-0">
-              <a href="feature.html" class="dropdown-item active">Features</a>
-              <a href="appointment.html" class="dropdown-item">Appointment</a>
-              <a href="team.html" class="dropdown-item">Our Team</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="feature.html" class="dropdown-item">Cervezas</a>
+              <a href="appointment.html" class="dropdown-item">Licores</a>
+              <a href="team.html" class="dropdown-item">Cocteles</a>
             </div>
           </div>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="contact.html" class="nav-item nav-link">Contactenos</a>
         </div>
       </div>
     </nav>
@@ -137,17 +134,17 @@
       data-wow-delay="0.1s"
     >
       <div class="container text-center py-5">
-        <h1 class="display-4 text-white animated slideInDown mb-4">Features</h1>
+        <h1 class="display-4 text-white animated slideInDown mb-4">Cervezas</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Home</a>
+              <a class="text-white" href="#">Inicio</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
+              <a class="text-white" href="#">Paginas</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Features
+              Cervezas
             </li>
           </ol>
         </nav>
@@ -161,15 +158,13 @@
         <div class="row g-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
-              <h6 class="text-body text-uppercase mb-2">Why Choose Us!</h6>
+              <h6 class="text-body text-uppercase mb-2">¡Las mejores cervezas!</h6>
               <h1 class="display-6 mb-0">
-                Our Specialization And Company Features
+                Nuestras cervezas
               </h1>
             </div>
             <p class="mb-5">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
+              Tenemos todo tipo de cervezas que te haran sentir fresco
             </p>
             <div class="row gy-5 gx-4">
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
@@ -177,44 +172,69 @@
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">Large number of services provided</h6>
+                  <h6 class="mb-0">Cervezas Artesanales</h6>
                 </div>
-                <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
-                >
+                <span>Tres cordilleras</span>
+                <br>
+                <span>Pilsner</span>
+                <br>
+                <span>Dunkel</span>
+                <br>
+                <span>Schwarzbier</span>
+                <br>
+                <span>Rauch</span>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
                 <div class="d-flex align-items-center mb-3">
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">25+ years of professional experience</h6>
+                  <h6 class="mb-0">Cervezas nacionales</h6>
                 </div>
-                <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
-                >
+                <span>Pilsen</span>
+                <br>
+                <span>Club Colombia</span>
+                <br>
+                <span>Aguila</span>
+                <br>
+                <span>Andina</span>
+                <br>
+                <span>BBC</span>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                 <div class="d-flex align-items-center mb-3">
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">A large number of grateful customers</h6>
+                  <h6 class="mb-0">Cervezas importadas</h6>
                 </div>
-                <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
-                >
+                <span>Budweiser</span>
+                <br>
+                <span>Corona</span>
+                <br>
+                <span>Stella Artois</span>
+                <br>
+                <span>Beck's.</span>
+                <br>
+                <span>Heinecken</span>
+
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                 <div class="d-flex align-items-center mb-3">
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">Always reliable and affordable prices</h6>
+                  <h6 class="mb-0">Tragos con cervezas</h6>
                 </div>
-                <span
-                  >Magna sea eos sit dolor, ipsum amet ipsum lorem diam</span
-                >
+                <span>Mojito con cerveza</span>
+                <br>
+                <span>Bull</span>
+                <br>
+                <span>Margarita miami</span>
+                <br>
+                <span>Black Velvet</span>
+                <br>
+                <span>Submarino</span>
               </div>
             </div>
           </div>
@@ -225,7 +245,7 @@
             >
               <img
                 class="position-absolute w-100 h-100"
-                src="img/feature.jpg"
+                src="img/fact-2.jpg"
                 alt=""
                 style="object-fit: cover"
               />
@@ -237,8 +257,8 @@
                   class="d-flex flex-column justify-content-center text-center bg-primary h-100 p-3"
                 >
                   <h1 class="text-white">25</h1>
-                  <h2 class="text-white">Years</h2>
-                  <h5 class="text-white mb-0">Experience</h5>
+                  <h2 class="text-white">años</h2>
+                  <h5 class="text-white mb-0">En el mercado</h5>
                 </div>
               </div>
             </div>
@@ -247,82 +267,6 @@
       </div>
     </div>
     <!-- Features End -->
-
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="row g-5">
-          <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="border-start border-5 border-primary ps-4 mb-5">
-              <h6 class="text-body text-uppercase mb-2">Testimonial</h6>
-              <h1 class="display-6 mb-0">What Our Happy Clients Say!</h1>
-            </div>
-            <p class="mb-4">
-              Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
-              ipsum et lorem et sit, sed stet lorem sit clita duo justo magna
-              dolore erat amet
-            </p>
-            <div class="row g-4">
-              <div class="col-sm-6">
-                <div class="d-flex align-items-center mb-2">
-                  <i class="fa fa-users fa-2x text-primary flex-shrink-0"></i>
-                  <h1 class="ms-3 mb-0">123+</h1>
-                </div>
-                <h5 class="mb-0">Happy Clients</h5>
-              </div>
-              <div class="col-sm-6">
-                <div class="d-flex align-items-center mb-2">
-                  <i class="fa fa-check fa-2x text-primary flex-shrink-0"></i>
-                  <h1 class="ms-3 mb-0">123+</h1>
-                </div>
-                <h5 class="mb-0">Projects Done</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="owl-carousel testimonial-carousel">
-              <div class="testimonial-item">
-                <img
-                  class="img-fluid mb-4"
-                  src="img/testimonial-1.jpg"
-                  alt=""
-                />
-                <p class="fs-5">
-                  Dolores sed duo clita tempor justo dolor et stet lorem kasd
-                  labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy
-                  et labore et tempor diam tempor erat.
-                </p>
-                <div
-                  class="bg-primary mb-3"
-                  style="width: 60px; height: 5px"
-                ></div>
-                <h5>Client Name</h5>
-                <span>Profession</span>
-              </div>
-              <div class="testimonial-item">
-                <img
-                  class="img-fluid mb-4"
-                  src="img/testimonial-2.jpg"
-                  alt=""
-                />
-                <p class="fs-5">
-                  Dolores sed duo clita tempor justo dolor et stet lorem kasd
-                  labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy
-                  et labore et tempor diam tempor erat.
-                </p>
-                <div
-                  class="bg-primary mb-3"
-                  style="width: 60px; height: 5px"
-                ></div>
-                <h5>Client Name</h5>
-                <span>Profession</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Testimonial End -->
 
     <!-- Footer Start -->
     <div
@@ -333,7 +277,7 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
             </h1>
             <p>
               Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
@@ -355,35 +299,35 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Address</h4>
+            <h4 class="text-light mb-4">Contactanos</h4>
             <p>
-              <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Quick Links</h4>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <h4 class="text-light mb-4">Enlaces rapidos</h4>
+            <a class="btn btn-link" href="">Sobre nosotros</a>
+            <a class="btn btn-link" href="">Contactenos</a>
+            <a class="btn btn-link" href="">Otros servicios</a>
+            <a class="btn btn-link" href="">Terminos y condiciones</a>
+            <a class="btn btn-link" href="">Soporte</a>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Newsletter</h4>
-            <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+            <h4 class="text-light mb-4">Informate</h4>
+            <p>Te enviaremos las ultimas noticias.</p>
             <div class="position-relative mx-auto" style="max-width: 400px">
               <input
                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                 type="text"
-                placeholder="Your email"
+                placeholder="Correo"
               />
               <button
                 type="button"
                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
-                SignUp
+                Inscribete
               </button>
             </div>
           </div>
