--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Mon - Fri : 09 AM - 09 PM</small>
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -107,9 +106,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link active">Home</a>
+          <a href="index.html" class="nav-item nav-link active">Inicio</a>
           <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
-          <a href="service.html" class="nav-item nav-link">Otros servicios</a>
+          <a href="service.html" class="nav-item nav-link">Reglamentos</a>
           <div class="nav-item dropdown">
             <a
               href="#"
@@ -118,11 +117,9 @@
               >Tipos</a
             >
             <div class="dropdown-menu bg-light m-0">
-              <a href="feature.html" class="dropdown-item">Features</a>
-              <a href="appointment.html" class="dropdown-item">Appointment</a>
-              <a href="team.html" class="dropdown-item">Our Team</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="feature.html" class="dropdown-item">Cervezas</a>
+              <a href="appointment.html" class="dropdown-item">Licores</a>
+              <a href="team.html" class="dropdown-item">Cocteles</a>
             </div>
           </div>
           <a href="contact.html" class="nav-item nav-link">Contactenos</a>
@@ -819,12 +816,12 @@
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Quick Links</h4>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <h4 class="text-light mb-4">Enlaces rapidos</h4>
+            <a class="btn btn-link" href="">Sobre nosotros</a>
+            <a class="btn btn-link" href="">Contactenos</a>
+            <a class="btn btn-link" href="">Otros servicios</a>
+            <a class="btn btn-link" href="">Terminos y condiciones</a>
+            <a class="btn btn-link" href="">Soporte</a>
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Informate</h4>
@@ -839,7 +836,7 @@
                 type="button"
                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
-                SignUp
+                Inscribete
               </button>
             </div>
           </div>
