--- a/service.html
+++ b/service.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Apex - Home Repair Website Template</title>
+    <title>Licores Juan - La mejor licorera del pais</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -65,7 +65,6 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Mon - Fri : 09 AM - 09 PM</small>
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -94,7 +93,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
         </h1>
       </a>
       <button
@@ -107,27 +106,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="service.html" class="nav-item nav-link active"
-            >Our Services</a
-          >
+          <a href="index.html" class="nav-item nav-link active">Inicio</a>
+          <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+          <a href="service.html" class="nav-item nav-link">Reglamentos</a>
           <div class="nav-item dropdown">
             <a
               href="#"
               class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
-              >Pages</a
+              >Tipos</a
             >
             <div class="dropdown-menu bg-light m-0">
-              <a href="feature.html" class="dropdown-item">Features</a>
-              <a href="appointment.html" class="dropdown-item">Appointment</a>
-              <a href="team.html" class="dropdown-item">Our Team</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="feature.html" class="dropdown-item">Cervezas</a>
+              <a href="appointment.html" class="dropdown-item">Licores</a>
+              <a href="team.html" class="dropdown-item">Cocteles</a>
             </div>
           </div>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="contact.html" class="nav-item nav-link">Contactenos</a>
         </div>
       </div>
     </nav>
@@ -140,18 +135,18 @@
     >
       <div class="container text-center py-5">
         <h1 class="display-4 text-white animated slideInDown mb-4">
-          Our Services
+          Reglamentos
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Home</a>
+              <a class="text-white" href="#">Inicio</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
+              <a class="text-white" href="#">Paginas</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Our Services
+              Reglamentos
             </li>
           </ol>
         </nav>
@@ -165,14 +160,14 @@
         <div class="row g-5 align-items-end mb-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4">
-              <h6 class="text-body text-uppercase mb-2">Our Services</h6>
+              <h6 class="text-body text-uppercase mb-2"></h6>
               <h1 class="display-6 mb-0">
-                Construction And Renovation Solutions
+                Obejtivos y funciones
               </h1>
             </div>
           </div>
           <div class="col-lg-6 text-lg-end wow fadeInUp" data-wow-delay="0.3s">
-            <a class="btn btn-primary py-3 px-5" href="">More Services</a>
+            <a class="btn btn-primary py-3 px-5" href="">Reload</a>
           </div>
         </div>
         <div class="row g-4 justify-content-center">
@@ -180,13 +175,12 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/service-1.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Building Construction</h5>
+                <h5 class="mb-3">Comercio</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  producir y comercializar licores de calidad 
                 </p>
                 <a class="small" href=""
-                  >READ MORE<i class="fa fa-arrow-right ms-3"></i
+                  >Leer mas <i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
             </div>
@@ -195,13 +189,12 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/service-2.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Home Maintainance</h5>
+                <h5 class="mb-3">Principios</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Garantizar el cumplimiento de los requisitos legales 
                 </p>
                 <a class="small" href=""
-                  >READ MORE<i class="fa fa-arrow-right ms-3"></i
+                  >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
             </div>
@@ -210,13 +203,12 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/service-3.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Renovation and Painting</h5>
+                <h5 class="mb-3">Clientes</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Satisfacer las expectativas de nuestros clientes y partes interesadas
                 </p>
                 <a class="small" href=""
-                  >READ MORE<i class="fa fa-arrow-right ms-3"></i
+                  >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
             </div>
@@ -225,13 +217,12 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/service-4.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Wiring and installation</h5>
+                <h5 class="mb-3">Responsabilidad</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  Controlar los peligros para minimizar los riesgos.
                 </p>
                 <a class="small" href=""
-                  >READ MORE<i class="fa fa-arrow-right ms-3"></i
+                  >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
             </div>
@@ -240,13 +231,12 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/service-5.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Tiling and Painting</h5>
+                <h5 class="mb-3">Salud</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  El exceso de alcohol es perjudicial para la salud.
                 </p>
                 <a class="small" href=""
-                  >READ MORE<i class="fa fa-arrow-right ms-3"></i
+                  >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
             </div>
@@ -255,13 +245,12 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/service-6.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Interior Design</h5>
+                <h5 class="mb-3">Venta</h5>
                 <p>
-                  Tempor erat elitr rebum at clita dolor diam ipsum sit diam
-                  amet diam et eos
+                  La venta de licores se lo ofrecemos solo a los mayores de 18 años.
                 </p>
                 <a class="small" href=""
-                  >READ MORE<i class="fa fa-arrow-right ms-3"></i
+                  >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
               </div>
             </div>
@@ -277,15 +266,14 @@
         <div class="row g-5">
           <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
-              <h6 class="text-body text-uppercase mb-2">Appointment</h6>
+              <h6 class="text-body text-uppercase mb-2">Reserva</h6>
               <h1 class="display-6 mb-0">
-                A Company Involved In Service And Maintenance
+                Aprovecha y reserva tus licores
               </h1>
             </div>
             <p class="mb-0">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
+              Dejamos que reserves o que pidas por anticipado tus licores 
+              y asi puedes planear tu fiesta muy anticipadamente. Aprovecha!
             </p>
           </div>
           <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -299,7 +287,7 @@
                       id="gname"
                       placeholder="Gurdian Name"
                     />
-                    <label for="gname">Your Name</label>
+                    <label for="gname">Nombre</label>
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -310,7 +298,7 @@
                       id="gmail"
                       placeholder="Gurdian Email"
                     />
-                    <label for="gmail">Your Email</label>
+                    <label for="gmail">Correo</label>
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -321,7 +309,7 @@
                       id="cname"
                       placeholder="Child Name"
                     />
-                    <label for="cname">Your Mobile</label>
+                    <label for="cname">Celular</label>
                   </div>
                 </div>
                 <div class="col-sm-6">
@@ -332,7 +320,7 @@
                       id="cage"
                       placeholder="Child Age"
                     />
-                    <label for="cage">Service Type</label>
+                    <label for="cage">Numero de cedula</label>
                   </div>
                 </div>
                 <div class="col-12">
@@ -343,12 +331,12 @@
                       id="message"
                       style="height: 100px"
                     ></textarea>
-                    <label for="message">Message</label>
+                    <label for="message">Mensaje</label>
                   </div>
                 </div>
                 <div class="col-12">
                   <button class="btn btn-primary w-100 py-3" type="submit">
-                    Get Appointment
+                    Reserva
                   </button>
                 </div>
               </div>
@@ -368,7 +356,7 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
             </h1>
             <p>
               Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
@@ -390,35 +378,35 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Address</h4>
+            <h4 class="text-light mb-4">Contactanos</h4>
             <p>
-              <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Quick Links</h4>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <h4 class="text-light mb-4">Enlaces rapidos</h4>
+            <a class="btn btn-link" href="">Sobre nosotros</a>
+            <a class="btn btn-link" href="">Contactenos</a>
+            <a class="btn btn-link" href="">Nuestros servicios</a>
+            <a class="btn btn-link" href="">Terminos y condiciones</a>
+            <a class="btn btn-link" href="">Soporte</a>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Newsletter</h4>
-            <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+            <h4 class="text-light mb-4">Informate</h4>
+            <p>Te enviaremos las ultimas noticias.</p>
             <div class="position-relative mx-auto" style="max-width: 400px">
               <input
                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                 type="text"
-                placeholder="Your email"
+                placeholder="Correo"
               />
               <button
                 type="button"
                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
-                SignUp
+                Inscribete
               </button>
             </div>
           </div>
