--- a/team.html
+++ b/team.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Apex - Home Repair Website Template</title>
+    <title>Licores Juan - La mejor licorera del pais</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -65,7 +65,6 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            <small>Mon - Fri : 09 AM - 09 PM</small>
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -94,7 +93,7 @@
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>APEX
+          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
         </h1>
       </a>
       <button
@@ -107,25 +106,23 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-3 py-lg-0">
-          <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="service.html" class="nav-item nav-link">Our Services</a>
+          <a href="index.html" class="nav-item nav-link active">Inicio</a>
+          <a href="about.html" class="nav-item nav-link">Sobre nosotros</a>
+          <a href="service.html" class="nav-item nav-link">Reglamentos</a>
           <div class="nav-item dropdown">
             <a
               href="#"
-              class="nav-link dropdown-toggle active"
+              class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
-              >Pages</a
+              >Tipos</a
             >
             <div class="dropdown-menu bg-light m-0">
-              <a href="feature.html" class="dropdown-item">Features</a>
-              <a href="appointment.html" class="dropdown-item">Appointment</a>
-              <a href="team.html" class="dropdown-item active">Our Team</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="feature.html" class="dropdown-item">Cervezas</a>
+              <a href="appointment.html" class="dropdown-item">Licores</a>
+              <a href="team.html" class="dropdown-item">Cocteles</a>
             </div>
           </div>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="contact.html" class="nav-item nav-link">Contactenos</a>
         </div>
       </div>
     </nav>
@@ -137,17 +134,17 @@
       data-wow-delay="0.1s"
     >
       <div class="container text-center py-5">
-        <h1 class="display-4 text-white animated slideInDown mb-4">Our Team</h1>
+        <h1 class="display-4 text-white animated slideInDown mb-4">Cocteles</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Home</a>
+              <a class="text-white" href="#">Inicio</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="text-white" href="#">Pages</a>
+              <a class="text-white" href="#">Paginas</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              Our Team
+              Cocteles
             </li>
           </ol>
         </nav>
@@ -161,70 +158,67 @@
         <div class="row g-5 align-items-end mb-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4">
-              <h6 class="text-body text-uppercase mb-2">Our Team</h6>
-              <h1 class="display-6 mb-0">Our Expert Worker</h1>
+              <h6 class="text-body text-uppercase mb-2">Nuestros mejores cocteles!</h6>
+              <h1 class="display-6 mb-0">Los mejores cocteles del pais</h1>
             </div>
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
             <p class="mb-0">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
             </p>
           </div>
         </div>
         <div class="row g-4">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-1.jpg" alt="" />
+              <img class="img-fluid" src="img/coctel-1.jpg" alt="" />
               <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
+                <h5>Margarita</h5>
+                <span>Tequila, triple seco y jugo de lima o limón.</span>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-2.jpg" alt="" />
+              <img class="img-fluid" src="img/coctel-2.jpg" alt="" />
               <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
+                <h5>Mojito</h5>
+                <span>Ron, azúcar, menta, lima, agua con gas o gaseosa y hielo.</span>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-3.jpg" alt="" />
+              <img class="img-fluid" src="img/coctel-4.jpg" alt="" />
               <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
+                <h5>Caipirinha</h5>
+                <span>Cachaza, lima o limón, azúcar y hielo.</span>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-2.jpg" alt="" />
+              <img class="img-fluid" src="img/coctel-3.jpg" alt="" />
               <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
+                <h5>Gintonic</h5>
+                <span>Ginebra y tónica.</span>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-3.jpg" alt="" />
+              <img class="img-fluid" src="img/coctel-5.jpg" alt="" />
               <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
+                <h5>Manhattan</h5>
+                <span>Whisky y vermut rojo</span>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item position-relative">
-              <img class="img-fluid" src="img/team-1.jpg" alt="" />
+              <img class="img-fluid" src="img/coctel-6.jpg" alt="" />
               <div class="team-text bg-white p-4">
-                <h5>Full Name</h5>
-                <span>Engineer</span>
+                <h5>Piña colada</h5>
+                <span>Piña, crema de coco y ron.</span>
               </div>
             </div>
           </div>
@@ -242,7 +236,7 @@
         <div class="row g-5">
           <div class="col-lg-3 col-md-6">
             <h1 class="text-white mb-4">
-              <i class="fa fa-building text-primary me-3"></i>APEX
+              <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
             </h1>
             <p>
               Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
@@ -264,35 +258,35 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Address</h4>
+            <h4 class="text-light mb-4">Contactenos</h4>
             <p>
-              <i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA
+              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
             </p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Quick Links</h4>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Our Services</a>
-            <a class="btn btn-link" href="">Terms & Condition</a>
-            <a class="btn btn-link" href="">Support</a>
+            <h4 class="text-light mb-4">Enlaces rapidos</h4>
+            <a class="btn btn-link" href="">Sobre nosotros</a>
+            <a class="btn btn-link" href="">Contactenos</a>
+            <a class="btn btn-link" href="">Otros servicios</a>
+            <a class="btn btn-link" href="">Terminos y condiciones</a>
+            <a class="btn btn-link" href="">Soporte</a>
           </div>
           <div class="col-lg-3 col-md-6">
-            <h4 class="text-light mb-4">Newsletter</h4>
-            <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+            <h4 class="text-light mb-4">Informate</h4>
+            <p>Te enviaremos las ultimas noticias.</p>
             <div class="position-relative mx-auto" style="max-width: 400px">
               <input
                 class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
                 type="text"
-                placeholder="Your email"
+                placeholder="Correo"
               />
               <button
                 type="button"
                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
               >
-                SignUp
+                Inscribete
               </button>
             </div>
           </div>
