--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0"
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
+        <h1 class="m-0 bi-cup-straw font-monospace text-black-60">
+          JUAN LICORES
         </h1>
       </a>
       <button
@@ -134,7 +134,9 @@
       data-wow-delay="0.1s"
     >
       <div class="container text-center py-5">
-        <h1 class="display-4 text-white animated slideInDown mb-4">Contactanos</h1>
+        <h1 class="display-4 text-white animated slideInDown mb-4">
+          Contactanos
+        </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
@@ -190,14 +192,14 @@
                 </h1>
               </div>
               <p>
-                Nos encargamos de darte una mejor experiencia recomendandote los 
-                mejores licores que podras conseguir en el pais, ademas de que no
-                te tienes que parar de tu silla o dejar a tus amigos, con los domicilios
-                los podras recibir en la puerta de tu casa.
+                Nos encargamos de darte una mejor experiencia recomendandote los
+                mejores licores que podras conseguir en el pais, ademas de que
+                no te tienes que parar de tu silla o dejar a tus amigos, con los
+                domicilios los podras recibir en la puerta de tu casa.
               </p>
               <p class="mb-4">
-                No lo pienses mas solo contactanos para que pases un excelente sabado 
-                con tu pareja y amigos.
+                No lo pienses mas solo contactanos para que pases un excelente
+                sabado con tu pareja y amigos.
               </p>
               <div class="border-top mt-4 pt-4">
                 <div class="row g-4">
@@ -239,8 +241,7 @@
             </div>
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-            <p class="mb-0">
-            </p>
+            <p class="mb-0"></p>
           </div>
         </div>
         <div class="row g-4">
@@ -308,9 +309,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Contactenos</h4>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
-            </p>
+            <p><i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia</p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
