--- a/feature.html
+++ b/feature.html
@@ -92,8 +92,8 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0"
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
+        <h1 class="m-0 bi-cup-straw font-monospace text-black-60">
+          JUAN LICORES
         </h1>
       </a>
       <button
@@ -158,10 +158,10 @@
         <div class="row g-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
-              <h6 class="text-body text-uppercase mb-2">¡Las mejores cervezas!</h6>
-              <h1 class="display-6 mb-0">
-                Nuestras cervezas
-              </h1>
+              <h6 class="text-body text-uppercase mb-2">
+                ¡Las mejores cervezas!
+              </h6>
+              <h1 class="display-6 mb-0">Nuestras cervezas</h1>
             </div>
             <p class="mb-5">
               Tenemos todo tipo de cervezas que te haran sentir fresco
@@ -175,13 +175,13 @@
                   <h6 class="mb-0">Cervezas Artesanales</h6>
                 </div>
                 <span>Tres cordilleras</span>
-                <br>
+                <br />
                 <span>Pilsner</span>
-                <br>
+                <br />
                 <span>Dunkel</span>
-                <br>
+                <br />
                 <span>Schwarzbier</span>
-                <br>
+                <br />
                 <span>Rauch</span>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
@@ -192,13 +192,13 @@
                   <h6 class="mb-0">Cervezas nacionales</h6>
                 </div>
                 <span>Pilsen</span>
-                <br>
+                <br />
                 <span>Club Colombia</span>
-                <br>
+                <br />
                 <span>Aguila</span>
-                <br>
+                <br />
                 <span>Andina</span>
-                <br>
+                <br />
                 <span>BBC</span>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
@@ -209,15 +209,14 @@
                   <h6 class="mb-0">Cervezas importadas</h6>
                 </div>
                 <span>Budweiser</span>
-                <br>
+                <br />
                 <span>Corona</span>
-                <br>
+                <br />
                 <span>Stella Artois</span>
-                <br>
+                <br />
                 <span>Beck's.</span>
-                <br>
+                <br />
                 <span>Heinecken</span>
-
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                 <div class="d-flex align-items-center mb-3">
@@ -227,13 +226,13 @@
                   <h6 class="mb-0">Tragos con cervezas</h6>
                 </div>
                 <span>Mojito con cerveza</span>
-                <br>
+                <br />
                 <span>Bull</span>
-                <br>
+                <br />
                 <span>Margarita miami</span>
-                <br>
+                <br />
                 <span>Black Velvet</span>
-                <br>
+                <br />
                 <span>Submarino</span>
               </div>
             </div>
@@ -300,9 +299,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Contactanos</h4>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
-            </p>
+            <p><i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia</p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
