--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             class="h-100 d-inline-flex align-items-center border-start border-end px-3"
           >
             <small class="fa fa-phone-alt me-2"></small>
-            <small>+012 345 6789</small>
+            <small>+022 345 6789</small>
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-envelope-open me-2"></small>
@@ -92,8 +92,8 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0"
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
+        <h1 class="m-0 bi-cup-straw font-monospace text-black-60">
+          JUAN LICORES
         </h1>
       </a>
       <button
@@ -147,15 +147,9 @@
                       Lugar donde presenciaras los mejores sabores
                     </h1>
                     <ol class="breadcrumb mb-4 pb-2">
-                      <li class="breadcrumb-item fs-5 text-light">
-                        Commercio
-                      </li>
-                      <li class="breadcrumb-item fs-5 text-light">
-                        Compra
-                      </li>
-                      <li class="breadcrumb-item fs-5 text-light">
-                        Ventas
-                      </li>
+                      <li class="breadcrumb-item fs-5 text-light">Commercio</li>
+                      <li class="breadcrumb-item fs-5 text-light">Compra</li>
+                      <li class="breadcrumb-item fs-5 text-light">Ventas</li>
                     </ol>
                     <a href="" class="btn btn-primary py-3 px-5"
                       >Mas detalless</a
@@ -174,21 +168,15 @@
                     <h5
                       class="text-light text-uppercase mb-3 animated slideInDown"
                     >
-                    Bienvenido a Juan Licores
+                      Bienvenido a Juan Licores
                     </h5>
                     <h1 class="display-2 text-light mb-3 animated slideInDown">
                       Servicios profesinales en cocteles y cata de licores
                     </h1>
                     <ol class="breadcrumb mb-4 pb-2">
-                      <li class="breadcrumb-item fs-5 text-light">
-                        Commercio
-                      </li>
-                      <li class="breadcrumb-item fs-5 text-light">
-                        Compra 
-                      </li>
-                      <li class="breadcrumb-item fs-5 text-light">
-                        Ventas
-                      </li>
+                      <li class="breadcrumb-item fs-5 text-light">Commercio</li>
+                      <li class="breadcrumb-item fs-5 text-light">Compra</li>
+                      <li class="breadcrumb-item fs-5 text-light">Ventas</li>
                     </ol>
                     <a href="" class="btn btn-primary py-3 px-5"
                       >Mas detalles</a
@@ -259,14 +247,14 @@
                 </h1>
               </div>
               <p>
-                Nos encargamos de darte una mejor experiencia recomendandote los 
-                mejores licores que podras conseguir en el pais, ademas de que no
-                te tienes que parar de tu silla o dejar a tus amigos, con los domicilios
-                los podras recibir en la puerta de tu casa.
+                Nos encargamos de darte una mejor experiencia recomendandote los
+                mejores licores que podras conseguir en el pais, ademas de que
+                no te tienes que parar de tu silla o dejar a tus amigos, con los
+                domicilios los podras recibir en la puerta de tu casa.
               </p>
               <p class="mb-4">
-                No lo pienses mas solo contactanos para que pases un excelente sabado 
-                con tu pareja y amigos.
+                No lo pienses mas solo contactanos para que pases un excelente
+                sabado con tu pareja y amigos.
               </p>
               <div class="border-top mt-4 pt-4">
                 <div class="row g-4">
@@ -307,7 +295,7 @@
               <h1 class="display-1">01</h1>
               <h4 class="text-white mb-3">Licores</h4>
               <p class="text-white">
-                Todo tipo de licores, toda clase de precios 
+                Todo tipo de licores, toda clase de precios
               </p>
               <a class="text-white small" href=""
                 >Leer mas<i class="fa fa-arrow-right ms-3"></i
@@ -322,7 +310,7 @@
               <h1 class="display-1">02</h1>
               <h4 class="text-white mb-3">Cervezas</h4>
               <p class="text-white">
-                Ya sea desde cervezas nacionales, importadas o artesanales 
+                Ya sea desde cervezas nacionales, importadas o artesanales
               </p>
               <a class="text-white small" href=""
                 >Leer mas<i class="fa fa-arrow-right ms-3"></i
@@ -353,8 +341,8 @@
               <h1 class="display-1">04</h1>
               <h4 class="text-white mb-3">Domicilios</h4>
               <p class="text-white">
-                Todo esto lo puedes tener desde la comodidad de tu casa 
-                con los domicilios, solo llamanos
+                Todo esto lo puedes tener desde la comodidad de tu casa con los
+                domicilios, solo llamanos
               </p>
               <a class="text-white small" href=""
                 >Leer mas<i class="fa fa-arrow-right ms-3"></i
@@ -373,13 +361,12 @@
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
               <h6 class="text-body text-uppercase mb-2">¡Por qué elegirnos!</h6>
-              <h1 class="display-6 mb-0">
-                Te lo diremos...
-              </h1>
+              <h1 class="display-6 mb-0">Te lo diremos...</h1>
             </div>
             <p class="mb-5">
-              Te ayudaremos a ese descanso que tanto te mereces. Y ese trago de licor que tanto quieres 
-              ¿Cuál prefieres? Seguro podemos complacerte.
+              Te ayudaremos a ese descanso que tanto te mereces. Y ese trago de
+              licor que tanto quieres ¿Cuál prefieres? Seguro podemos
+              complacerte.
             </p>
             <div class="row gy-5 gx-4">
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
@@ -390,8 +377,8 @@
                   <h6 class="mb-0">Gran cantidad de servicios prestados.</h6>
                 </div>
                 <span
-                  >Variedad, calidad, marcas… El licor que estés buscando en nuestra 
-                  licorería con seguridad vas a encontrar.</span
+                  >Variedad, calidad, marcas… El licor que estés buscando en
+                  nuestra licorería con seguridad vas a encontrar.</span
                 >
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
@@ -402,8 +389,9 @@
                   <h6 class="mb-0">25+ años de experiencia en el mercado</h6>
                 </div>
                 <span
-                  >Te mereces lo mejor y sólo lo mejor. Mereces licores de calidad en 
-                  tu vida y en cualquier celebración y para tí los tenemos.</span
+                  >Te mereces lo mejor y sólo lo mejor. Mereces licores de
+                  calidad en tu vida y en cualquier celebración y para tí los
+                  tenemos.</span
                 >
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
@@ -413,9 +401,7 @@
                   ></i>
                   <h6 class="mb-0">Un gran número de clientes agradecidos.</h6>
                 </div>
-                <span
-                  >Todos siempre quedan satisfechos, te lo aseguramos</span
-                >
+                <span>Todos siempre quedan satisfechos, te lo aseguramos</span>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                 <div class="d-flex align-items-center mb-3">
@@ -468,9 +454,7 @@
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4">
               <h6 class="text-body text-uppercase mb-2"></h6>
-              <h1 class="display-6 mb-0">
-                Objetivos y funciones 
-              </h1>
+              <h1 class="display-6 mb-0">Objetivos y funciones</h1>
             </div>
           </div>
           <div class="col-lg-6 text-lg-end wow fadeInUp" data-wow-delay="0.3s">
@@ -483,9 +467,7 @@
               <img class="img-fluid" src="img/service-1.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Comercio</h5>
-                <p>
-                  Producir y comercializar licores de calidad.
-                </p>
+                <p>Producir y comercializar licores de calidad.</p>
                 <a class="small" href=""
                   >leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -497,9 +479,7 @@
               <img class="img-fluid" src="img/service-2.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Principios</h5>
-                <p>
-                  Garantizar el cumplimiento de los requisitos legales.
-                </p>
+                <p>Garantizar el cumplimiento de los requisitos legales.</p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -512,7 +492,8 @@
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Clientes</h5>
                 <p>
-                  Satisfacer las expectativas de nuestros clientes y partes interesadas.
+                  Satisfacer las expectativas de nuestros clientes y partes
+                  interesadas.
                 </p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
@@ -525,9 +506,7 @@
               <img class="img-fluid" src="img/service-4.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Responsabilidad</h5>
-                <p>
-                  Controlar los peligros para minimizar los riesgos.
-                </p>
+                <p>Controlar los peligros para minimizar los riesgos.</p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -539,9 +518,7 @@
               <img class="img-fluid" src="img/service-5.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Salud</h5>
-                <p>
-                  El exceso de alcohol es perjudicial para la salud.
-                </p>
+                <p>El exceso de alcohol es perjudicial para la salud.</p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -552,9 +529,10 @@
             <div class="service-item bg-light overflow-hidden h-100">
               <img class="img-fluid" src="img/service-6.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
-                <h5 class="mb-3">Venta </h5>
+                <h5 class="mb-3">Venta</h5>
                 <p>
-                  La venta de licores se lo ofrecemos solo a los mayores de 18 años.
+                  La venta de licores se lo ofrecemos solo a los mayores de 18
+                  años.
                 </p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
@@ -577,15 +555,14 @@
           <div class="col-lg-5 col-md-6 wow fadeIn" data-wow-delay="0.3s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
               <h6 class="text-white text-uppercase mb-2">Socios</h6>
-              <h1 class="display-6 text-white mb-0">
-                Puedes volverte socio!
-              </h1>
+              <h1 class="display-6 text-white mb-0">Puedes volverte socio!</h1>
             </div>
             <p class="text-white mb-0">
-              Al volverte socio de nuestra licorera tendras acceso a increibles descuentos, 
-              podras contratar a nuestros mejores bartender y asi tener una de las mejores 
-              fiestas de tu vida. Que nunca te falte la diversión, que nunca en tus momentos 
-              de celebración te falte licor… De eso nos aseguraremos.
+              Al volverte socio de nuestra licorera tendras acceso a increibles
+              descuentos, podras contratar a nuestros mejores bartender y asi
+              tener una de las mejores fiestas de tu vida. Que nunca te falte la
+              diversión, que nunca en tus momentos de celebración te falte
+              licor… De eso nos aseguraremos.
             </p>
           </div>
           <div class="col-lg-7 col-md-6 wow fadeIn" data-wow-delay="0.5s">
@@ -670,8 +647,7 @@
             </div>
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-            <p class="mb-0">
-            </p>
+            <p class="mb-0"></p>
           </div>
         </div>
         <div class="row g-4">
@@ -714,10 +690,13 @@
           <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
               <h6 class="text-body text-uppercase mb-2"></h6>
-              <h1 class="display-6 mb-0">Nuestros clientes siempre quedan satisfechos</h1>
+              <h1 class="display-6 mb-0">
+                Nuestros clientes siempre quedan satisfechos
+              </h1>
             </div>
             <p class="mb-4">
-              Gracias a nuestros mejores empleados siempre podemos satisfacer todas las necesidades de nuestros clientes 
+              Gracias a nuestros mejores empleados siempre podemos satisfacer
+              todas las necesidades de nuestros clientes
             </p>
             <div class="row g-4">
               <div class="col-sm-6">
@@ -745,7 +724,9 @@
                   alt=""
                 />
                 <p class="fs-5">
-                  repudiandae accusantium eius perspiciatis blanditiis aliquid. Quod minima iure temporibus blanditiis commodi suscipit quae veritatis! Beatae, eaque itaque.
+                  repudiandae accusantium eius perspiciatis blanditiis aliquid.
+                  Quod minima iure temporibus blanditiis commodi suscipit quae
+                  veritatis! Beatae, eaque itaque.
                 </p>
                 <div
                   class="bg-primary mb-3"
@@ -761,7 +742,9 @@
                   alt=""
                 />
                 <p class="fs-5">
-                  repudiandae accusantium eius perspiciatis blanditiis aliquid. Quod minima iure temporibus blanditiis commodi suscipit quae veritatis! Beatae, eaque itaque.
+                  repudiandae accusantium eius perspiciatis blanditiis aliquid.
+                  Quod minima iure temporibus blanditiis commodi suscipit quae
+                  veritatis! Beatae, eaque itaque.
                 </p>
                 <div
                   class="bg-primary mb-3"
@@ -809,9 +792,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Contactanos</h4>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
-            </p>
+            <p><i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia</p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
