--- a/team.html
+++ b/team.html
@@ -92,8 +92,8 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0"
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
+        <h1 class="m-0 bi-cup-straw font-monospace text-black-60">
+          JUAN LICORES
         </h1>
       </a>
       <button
@@ -158,13 +158,14 @@
         <div class="row g-5 align-items-end mb-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4">
-              <h6 class="text-body text-uppercase mb-2">Nuestros mejores cocteles!</h6>
+              <h6 class="text-body text-uppercase mb-2">
+                Nuestros mejores cocteles!
+              </h6>
               <h1 class="display-6 mb-0">Los mejores cocteles del pais</h1>
             </div>
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-            <p class="mb-0">
-            </p>
+            <p class="mb-0"></p>
           </div>
         </div>
         <div class="row g-4">
@@ -182,7 +183,10 @@
               <img class="img-fluid" src="img/coctel-2.jpg" alt="" />
               <div class="team-text bg-white p-4">
                 <h5>Mojito</h5>
-                <span>Ron, azúcar, menta, lima, agua con gas o gaseosa y hielo.</span>
+                <span
+                  >Ron, azúcar, menta, lima, agua con gas o gaseosa y
+                  hielo.</span
+                >
               </div>
             </div>
           </div>
@@ -259,9 +263,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Contactenos</h4>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
-            </p>
+            <p><i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia</p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
