--- a/appointment.html
+++ b/appointment.html
@@ -92,8 +92,8 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0"
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
+        <h1 class="m-0 bi-cup-straw font-monospace text-black-60">
+          JUAN LICORES
         </h1>
       </a>
       <button
@@ -127,16 +127,13 @@
       </div>
     </nav>
     <!-- Navbar End -->
-
     <!-- Page Header Start -->
     <div
       class="container-fluid page-header py-5 mb-5 wow fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container text-center py-5">
-        <h1 class="display-4 text-white animated slideInDown mb-4">
-          Licores
-        </h1>
+        <h1 class="display-4 text-white animated slideInDown mb-4">Licores</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item">
@@ -160,10 +157,10 @@
         <div class="row g-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
-              <h6 class="text-body text-uppercase mb-2">¡Los mejores licores!</h6>
-              <h1 class="display-6 mb-0">
-                Nuestros Licores
-              </h1>
+              <h6 class="text-body text-uppercase mb-2">
+                ¡Los mejores licores!
+              </h6>
+              <h1 class="display-6 mb-0">Nuestros Licores</h1>
             </div>
             <p class="mb-5">
               Tenemos todo tipo de licores que no dejaran que la fiesta acabe
@@ -177,13 +174,13 @@
                   <h6 class="mb-0">Aguardiente</h6>
                 </div>
                 <span>Antioqueño</span>
-                <br>
+                <br />
                 <span>Néctar</span>
-                <br>
+                <br />
                 <span>Cristal</span>
-                <br>
+                <br />
                 <span>Llanero</span>
-                <br>
+                <br />
                 <span>Real</span>
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
@@ -194,13 +191,13 @@
                   <h6 class="mb-0">Ron</h6>
                 </div>
                 <span>Viejo de caldas</span>
-                <br>
+                <br />
                 <span>Medellin</span>
-                <br>
+                <br />
                 <span>Bacardi</span>
-                <br>
+                <br />
                 <span>Havana club especial</span>
-                <br>
+                <br />
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                 <div class="d-flex align-items-center mb-3">
@@ -210,31 +207,30 @@
                   <h6 class="mb-0">Tequila</h6>
                 </div>
                 <span>1800 Añejo</span>
-                <br>
+                <br />
                 <span>Don Julio Añejo</span>
-                <br>
+                <br />
                 <span>Jose Cuervo</span>
-                <br>
+                <br />
                 <span>Herradura Reposado</span>
-                <br>
+                <br />
                 <span>Gran Centenario Leyenda.</span>
-
               </div>
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                 <div class="d-flex align-items-center mb-3">
                   <i
                     class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"
                   ></i>
-                  <h6 class="mb-0">whisky </h6>
+                  <h6 class="mb-0">whisky</h6>
                 </div>
                 <span>Johnnie Walker</span>
-                <br>
+                <br />
                 <span>Chivas Regal</span>
-                <br>
+                <br />
                 <span>Buchanan's</span>
-                <br>
+                <br />
                 <span>Ballantine's</span>
-                <br>
+                <br />
                 <span>Glenfiddich</span>
               </div>
             </div>
@@ -301,9 +297,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Contactanos</h4>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
-            </p>
+            <p><i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia</p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
