--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,6 @@
           </div>
           <div class="h-100 d-inline-flex align-items-center border-end px-3">
             <small class="far fa-clock me-2"></small>
-            
           </div>
         </div>
         <div class="col-lg-5 px-5 text-end">
@@ -93,8 +92,8 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0"
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
+        <h1 class="m-0 bi-cup-straw font-monospace text-black-60">
+          JUAN LICORES
         </h1>
       </a>
       <button
@@ -218,10 +217,10 @@
               </h1>
             </div>
             <p class="mb-4">
-              El formulario de contacto está actualmente inactivo. 
-              Obtenga un formulario de contacto funcional y funcional 
-              con Ajax y PHP en unos minutos. Simplemente copie y pegue
-               los archivos, agregue un pequeño código y listo.
+              El formulario de contacto está actualmente inactivo. Obtenga un
+              formulario de contacto funcional y funcional con Ajax y PHP en
+              unos minutos. Simplemente copie y pegue los archivos, agregue un
+              pequeño código y listo.
               <a href="https://htmlcodex.com/contact-form">Download Now</a>.
             </p>
             <form>
@@ -315,9 +314,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Contactenos</h4>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
-            </p>
+            <p><i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia</p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
