--- a/service.html
+++ b/service.html
@@ -92,8 +92,8 @@
       class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0"
     >
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <h1 class="m-0">
-          <i class="fa fa-building text-primary me-3"></i>JUAN LICORES
+        <h1 class="m-0 bi-cup-straw font-monospace text-black-60">
+          JUAN LICORES
         </h1>
       </a>
       <button
@@ -161,9 +161,7 @@
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4">
               <h6 class="text-body text-uppercase mb-2"></h6>
-              <h1 class="display-6 mb-0">
-                Obejtivos y funciones
-              </h1>
+              <h1 class="display-6 mb-0">Obejtivos y funciones</h1>
             </div>
           </div>
           <div class="col-lg-6 text-lg-end wow fadeInUp" data-wow-delay="0.3s">
@@ -176,9 +174,7 @@
               <img class="img-fluid" src="img/service-1.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Comercio</h5>
-                <p>
-                  producir y comercializar licores de calidad 
-                </p>
+                <p>producir y comercializar licores de calidad</p>
                 <a class="small" href=""
                   >Leer mas <i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -190,9 +186,7 @@
               <img class="img-fluid" src="img/service-2.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Principios</h5>
-                <p>
-                  Garantizar el cumplimiento de los requisitos legales 
-                </p>
+                <p>Garantizar el cumplimiento de los requisitos legales</p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -205,7 +199,8 @@
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Clientes</h5>
                 <p>
-                  Satisfacer las expectativas de nuestros clientes y partes interesadas
+                  Satisfacer las expectativas de nuestros clientes y partes
+                  interesadas
                 </p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
@@ -218,9 +213,7 @@
               <img class="img-fluid" src="img/service-4.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Responsabilidad</h5>
-                <p>
-                  Controlar los peligros para minimizar los riesgos.
-                </p>
+                <p>Controlar los peligros para minimizar los riesgos.</p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -232,9 +225,7 @@
               <img class="img-fluid" src="img/service-5.jpg" alt="" />
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Salud</h5>
-                <p>
-                  El exceso de alcohol es perjudicial para la salud.
-                </p>
+                <p>El exceso de alcohol es perjudicial para la salud.</p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
                 ></a>
@@ -247,7 +238,8 @@
               <div class="service-text position-relative text-center h-100 p-4">
                 <h5 class="mb-3">Venta</h5>
                 <p>
-                  La venta de licores se lo ofrecemos solo a los mayores de 18 años.
+                  La venta de licores se lo ofrecemos solo a los mayores de 18
+                  años.
                 </p>
                 <a class="small" href=""
                   >Leer mas<i class="fa fa-arrow-right ms-3"></i
@@ -267,13 +259,11 @@
           <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="border-start border-5 border-primary ps-4 mb-5">
               <h6 class="text-body text-uppercase mb-2">Reserva</h6>
-              <h1 class="display-6 mb-0">
-                Aprovecha y reserva tus licores
-              </h1>
+              <h1 class="display-6 mb-0">Aprovecha y reserva tus licores</h1>
             </div>
             <p class="mb-0">
-              Dejamos que reserves o que pidas por anticipado tus licores 
-              y asi puedes planear tu fiesta muy anticipadamente. Aprovecha!
+              Dejamos que reserves o que pidas por anticipado tus licores y asi
+              puedes planear tu fiesta muy anticipadamente. Aprovecha!
             </p>
           </div>
           <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -379,9 +369,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h4 class="text-light mb-4">Contactanos</h4>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia
-            </p>
+            <p><i class="fa fa-map-marker-alt me-3"></i>Medellin - Antioquia</p>
             <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
             <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
           </div>
